commit translated contents

--- a/docs/visual-basic/misc/bc2009.md
+++ b/docs/visual-basic/misc/bc2009.md
@@ -1,5 +1,5 @@
 ---
-title: opzione <optionname> può essere seguita solo da '+' o '-'
+title: L'opzione <optionname> può essere seguita solo da '+' o da '-'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2009
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2009
 ms.assetid: 90e5dcf9-37fb-4a97-9f53-4e7c73d6ba9f
-ms.openlocfilehash: 4d814750129d61676f2de16cb772b9ba2df5e7fa
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 23455b30aa862ad473e35b63bd295d78da8a591c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658678"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367373"
 ---
-# <a name="option-optionname-can-be-followed-only-by--or--"></a>opzione \<nomeopzione > può essere seguita solo da '+' o '-'
+# <a name="option-optionname-can-be-followed-only-by--or--"></a>L'opzione \<optionname> può essere seguita solo da '+' o da '-'
 Il testo che segue l'opzione non è un segno più (+) o un segno meno (-).  
   
  **ID errore:** BC2009  
@@ -23,11 +23,11 @@ Il testo che segue l'opzione non è un segno più (+) o un segno meno (-).
   
 - Sostituire il testo che segue l'opzione con un segno più (+) per attivare l'opzione.  
   
-     oppure  
+     - o -  
   
 - Sostituire il testo che segue l'opzione con un segno meno (-) per disattivare l'opzione.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Opzioni del compilatore Visual Basic in ordine alfabetico](../../visual-basic/reference/command-line-compiler/compiler-options-listed-alphabetically.md)
-- [Tipi di errore](../../visual-basic/programming-guide/language-features/error-types.md)
+- [Opzioni del compilatore Visual Basic in ordine alfabetico](../reference/command-line-compiler/compiler-options-listed-alphabetically.md)
+- [Tipi di errore](../programming-guide/language-features/error-types.md)
