--- a/docs/visual-basic/misc/bc2023.md
+++ b/docs/visual-basic/misc/bc2023.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC2023
 ms.assetid: 60914807-1fde-4fef-9c6f-6f4a62527eed
-ms.openlocfilehash: d8ccb2b078f8bdeb3de27e6d25603925f1de9357
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: ccd87e148cff6502a33390d1f59096891c3ab530
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366957"
 ---
 # <a name="cannot-specify-both-win32icon-and-win32resource"></a>non è possibile specificare sia /win32icon che /win32resource
 Le opzioni `/win32resource` e `/win32icon` si escludono a vicenda perché entrambe inseriscono informazioni sulle icone nel file di output.  
@@ -23,11 +23,11 @@ Le opzioni `/win32resource` e `/win32icon` si escludono a vicenda perché entram
   
 - Usare solo l'opzione `/win32icon` per inserire un file ICO nel file di output. Il file ICO rappresenta il file di output in Esplora risorse.  
   
-     oppure  
+     - o -  
   
 - Usare solo l'opzione `/win32resource` per inserire un file di risorse Win32 nel file di output. Una risorsa Win32 può contenere informazioni sulla versione o sulla bitmap (icona) che consentono di identificare l'applicazione in Esplora risorse.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [-win32icon](../../visual-basic/reference/command-line-compiler/win32icon.md)
-- [-win32resource](../../visual-basic/reference/command-line-compiler/win32resource.md)
+- [-win32icon](../reference/command-line-compiler/win32icon.md)
+- [-win32resource](../reference/command-line-compiler/win32resource.md)
