--- a/docs/visual-basic/misc/bc2025.md
+++ b/docs/visual-basic/misc/bc2025.md
@@ -1,5 +1,5 @@
 ---
-title: L'opzione-noconfig è stata ignorata perché è stata specificata in un file di risposta
+title: Opzione -noconfig ignorata perché specificata in un file di risposta
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2025
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC2025
 ms.assetid: 87fb393d-e17f-4e50-8d98-d9dfeba30c3e
-ms.openlocfilehash: de421bb4a63fd5f43ce9ca035d6b10d0333c1bda
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: e0c0b29018eb68242b32d1c5b0b69d3a2003b399
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775410"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366931"
 ---
 # <a name="ignoring-noconfig-option-because-it-was-specified-in-a-response-file"></a>Opzione /noconfig ignorata perché specificata in un file di risposta
 L'opzione `/noconfig` indica al compilatore di non compilare con il file Vbc.rsp. Tuttavia, il compilatore elabora il file Vbc.rsp prima di elaborare qualsiasi altro file di risposta, quindi non può soddisfare l'opzione `/noconfig` in un file di risposta.  
@@ -27,5 +27,5 @@ L'opzione `/noconfig` indica al compilatore di non compilare con il file Vbc.rsp
   
 ## <a name="see-also"></a>Vedere anche
 
-- [-noconfig](../../visual-basic/reference/command-line-compiler/noconfig.md)
-- [@ (Specifica di un file di risposta)](../../visual-basic/reference/command-line-compiler/specify-response-file.md)
+- [-noconfig](../reference/command-line-compiler/noconfig.md)
+- [@ (Specifica di un file di risposta)](../reference/command-line-compiler/specify-response-file.md)
