--- a/docs/visual-basic/misc/bc30210.md
+++ b/docs/visual-basic/misc/bc30210.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30210
 ms.assetid: 4d217e56-0eac-4834-bcad-234a69809390
-ms.openlocfilehash: 81c78403d321731349787c77e8149ecc492e6945
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d63c162dc23c3679731ef007cb764e355afa3978
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028083"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409192"
 ---
 # <a name="option-strict-on-requires-all-function-property-and-operator-declarations-to-have-an-as-clause"></a>Option Strict On richiede che tutte le dichiarazioni di funzioni, di proprietà e di operatori abbiano una clausola 'As'
 Una dichiarazione contiene una proprietà dichiarata o un valore restituito da una funzione senza una clausola `As` . Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.  
@@ -27,6 +27,6 @@ Una dichiarazione contiene una proprietà dichiarata o un valore restituito da u
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
