--- a/docs/visual-basic/misc/bc30490.md
+++ b/docs/visual-basic/misc/bc30490.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile combinare 'Default' con '<specifier>'
+title: Non è possibile combinare ' default ' con ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30490
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30490
 ms.assetid: fb29622c-a176-4185-94ae-2c1ca85adddb
-ms.openlocfilehash: 25c732f543960c6ff1d451b9a7a73e951ab85aa6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 68aa51246d5611926512b3f9c2e940e90609b4e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620629"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411317"
 ---
-# <a name="default-cannot-be-combined-with-specifier"></a>Non è possibile combinare 'Default' con '\<identificatore >'
+# <a name="default-cannot-be-combined-with-specifier"></a>Non è possibile combinare ' default ' con ' \<specifier> '
 Si è provato a combinare la parola chiave `Default` con un identificatore non valido in questo contesto, ad esempio `Shared` o `Private`.  
   
  **ID errore:** BC30490  
@@ -29,4 +29,4 @@ Si è provato a combinare la parola chiave `Default` con un identificatore non v
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Default](../../visual-basic/language-reference/modifiers/default.md)
+- [Default](../language-reference/modifiers/default.md)
