--- a/docs/visual-basic/misc/bc30581.md
+++ b/docs/visual-basic/misc/bc30581.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione 'AddressOf' non può essere convertito in '<typename>'perché'<typename>' non è un tipo delegato
+title: L'espressione 'AddressOf' non può essere convertita in '<typename>' perché '<typename>' non è un tipo delegato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30581
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30581
 ms.assetid: 5db7589a-5456-4b3a-9d6b-93d9157f0484
-ms.openlocfilehash: ece7dc6fdde81e05b86002337f250d0e9f7d2bbf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 68c74e87cb609e0bdfb6ed0552ba15c4eaef9ed3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621069"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370011"
 ---
-# <a name="addressof-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a>Espressione 'AddressOf' non può essere convertito in '\<nomeTipo >' perché '\<nomeTipo >' non è un tipo delegato
+# <a name="addressof-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a>L'espressione 'AddressOf' non può essere convertita in '\<typename>' perché '\<typename>' non è un tipo delegato
 Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che non è un tipo delegato.  
   
  L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica. `AddressOf` può essere usato come operando di un costruttore di delegato o può essere usato in un contesto in cui il tipo del delegato può essere determinato dal compilatore.  
@@ -27,4 +27,4 @@ Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che non 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore AddressOf](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [Operatore AddressOf](../language-reference/operators/addressof-operator.md)
