--- a/docs/visual-basic/misc/bc30588.md
+++ b/docs/visual-basic/misc/bc30588.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30588
 ms.assetid: 98866bc4-d3f5-4a80-ab9e-0817392bf237
-ms.openlocfilehash: 5ce16618bff1700dae34ccd3deb315f66e717005
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1526ad115e8bd25a974cf598557bce66992cc061
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620639"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369725"
 ---
 # <a name="omitted-argument-cannot-match-a-paramarray-parameter"></a>L'argomento omesso non può corrispondere a un parametro ParamArray
 È stato omesso un argomento che deve corrispondere a un parametro `ParamArray` . `ParamArray`, che consente di passare un numero arbitrario di argomenti a una routine, può essere usato solo nell'ultimo argomento di un elenco di argomenti.  
@@ -25,4 +25,4 @@ ms.locfileid: "64620639"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
