--- a/docs/visual-basic/misc/bc30601.md
+++ b/docs/visual-basic/misc/bc30601.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30601
 ms.assetid: c8fbdc21-d2ff-404d-92b9-7277ade18e60
-ms.openlocfilehash: a5a1a4615f7b98431080da1102ccfe1ac036173e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d7a3998a5e6f1ccbb472c9a3cb6828f80face577
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620644"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369582"
 ---
 # <a name="--expected"></a>Previsto '-'
 La sintassi per questa riga non è corretta.  
@@ -25,4 +25,4 @@ La sintassi per questa riga non è corretta.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Struttura del programma e convenzioni di scrittura del codice](../../visual-basic/programming-guide/program-structure/program-structure-and-code-conventions.md)
+- [Struttura del programma e convenzioni del codice](../programming-guide/program-structure/program-structure-and-code-conventions.md)
