--- a/docs/visual-basic/misc/bc31406.md
+++ b/docs/visual-basic/misc/bc31406.md
@@ -1,5 +1,5 @@
 ---
-title: "'<methodname>' non è possibile eseguire l'override di un metodo nascosto"
+title: "' <methodname> ' non può eseguire l'override di un metodo che è stato nascosto"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31406
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31406
 ms.assetid: 08ed11a6-3399-49fa-ac6e-c5df1328a24e
-ms.openlocfilehash: aebf7f315774456d7801daa05a48fb6b0efaf969
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a5eff33db05138a993bd27b55ec0b9630d4dad7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625496"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407860"
 ---
-# <a name="methodname-cannot-override-a-method-that-has-been-shadowed"></a>'\<NomeMetodo >' non è possibile eseguire l'override di un metodo nascosto
+# <a name="methodname-cannot-override-a-method-that-has-been-shadowed"></a>' \<methodname> ' non può eseguire l'override di un metodo che è stato nascosto
 Un metodo ha tentato di eseguire l'override di un metodo che nasconde un altro membro.  
   
  **ID errore:** BC31406  
@@ -25,5 +25,5 @@ Un metodo ha tentato di eseguire l'override di un metodo che nasconde un altro m
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
+- [Override](../language-reference/modifiers/overrides.md)
