--- a/docs/visual-basic/misc/bc32065.md
+++ b/docs/visual-basic/misc/bc32065.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32065
 ms.assetid: 94cfe3de-74fd-4a2c-9246-ec4a05b73d55
-ms.openlocfilehash: 1bf9fab02f7ea6f8a8fe68848f3d2295e4f2ca92
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9092633be3c52625d35c64dde70bdd746d499f38
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618739"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411935"
 ---
 # <a name="type-parameters-cannot-be-specified-on-this-declaration"></a>I parametri di tipo non possono essere specificati in questa dichiarazione
 Un elemento di programmazione è dichiarato con un elenco di parametri di tipo, ma l'elemento di programmazione non è idoneo come tipo generico.  
@@ -27,5 +27,5 @@ Un elemento di programmazione è dichiarato con un elenco di parametri di tipo, 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
