--- a/docs/visual-basic/misc/bc36714.md
+++ b/docs/visual-basic/misc/bc36714.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36714
 ms.assetid: ba9408f3-e606-4749-8372-987999f405f5
-ms.openlocfilehash: 9482789691df2faf704c4533c6e71173d7f9234b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0d7a328c2a08dd10bddd43549c9c6878fd065096
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663162"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369569"
 ---
 # <a name="expanded-properties-cannot-be-initialized"></a>Non è possibile inizializzare le proprietà espanse
 Una proprietà implementata automaticamente può essere inizializzata come parte della relativa dichiarazione, mentre questo non è possibile per una proprietà espansa.  
@@ -57,6 +57,6 @@ End Class
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Proprietà implementate automaticamente](../../visual-basic/programming-guide/language-features/procedures/auto-implemented-properties.md)
-- [Procedura: Creare una proprietà](../../visual-basic/programming-guide/language-features/procedures/how-to-create-a-property.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Proprietà implementate automaticamente](../programming-guide/language-features/procedures/auto-implemented-properties.md)
+- [Procedura: creare una proprietà](../programming-guide/language-features/procedures/how-to-create-a-property.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
