--- a/docs/visual-basic/misc/bc40003.md
+++ b/docs/visual-basic/misc/bc40003.md
@@ -1,5 +1,5 @@
 ---
-title: <type1> «<membername>' nasconde un membro che supportano l'overload dichiarato nella base <type2> '<classname>»
+title: <type1>' <membername> ' nasconde un membro che esegue l'overload dichiarato nella base <type2> ' <classname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc40003
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC40003
 ms.assetid: 1e0d2061-0ad9-4915-b946-d55cb5d5ee80
-ms.openlocfilehash: ca09ca29b7ae250e24f77057f2971f50905630b9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5ead09c7f38c0375ef8a02752ba57c08e08d6cce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614432"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369297"
 ---
-# <a name="type1-membername-shadows-an-overloadable-member-declared-in-the-base-type2-classname"></a>\<type1 > '\<nomeMembro >' nasconde un membro che supportano l'overload dichiarato nella base \<type2 > '\<NomeClasse >'
-\<type1 > '\<nomeMembro >' nasconde un membro che supportano l'overload dichiarato nella base \<type2 > '\<classname >. Per eseguire l'overload del metodo di base, quest'ultimo deve essere dichiarato 'Overloads'.  
+# <a name="type1-membername-shadows-an-overloadable-member-declared-in-the-base-type2-classname"></a>\<type1>' \<membername> ' nasconde un membro che esegue l'overload dichiarato nella base \<type2> ' \<classname> '
+\<type1>' \<membername> ' nasconde un membro che esegue l'overload dichiarato nell'oggetto di base \<type2> \<classname> . Per eseguire l'overload del metodo di base, quest'ultimo deve essere dichiarato 'Overloads'.  
   
- Una classe derivata definisce una routine `Function` o `Sub` oppure una `Property` con lo stesso nome di una routine o proprietà definita nella classe base. Dal momento che le routine e le proprietà sono membri che supportano l'overload, la classe derivata può eseguire l'overload o nascondere il membro della classe base. Tuttavia, il codice della classe derivata non specifica [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) o [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione. In assenza di una parola chiave, il compilatore presuppone `Shadows`.  
+ Una classe derivata definisce una routine `Function` o `Sub` oppure una `Property` con lo stesso nome di una routine o proprietà definita nella classe base. Dal momento che le routine e le proprietà sono membri che supportano l'overload, la classe derivata può eseguire l'overload o nascondere il membro della classe base. Tuttavia, il codice della classe derivata non specifica [Overloads](../language-reference/modifiers/overloads.md) o [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione. In assenza di una parola chiave, il compilatore presuppone `Shadows`.  
   
  È buona norma specificare `Overloads` o `Shadows`nella programmazione. Questo rende il codice più semplice da leggere e comprendere.  
   
@@ -35,10 +35,10 @@ ms.locfileid: "64614432"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload della routine](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [Overload](../../visual-basic/language-reference/modifiers/overloads.md)
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
-- [Shadowing in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
-- [Istruzione Sub](../../visual-basic/language-reference/statements/sub-statement.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [Overload della routine](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [Overload](../language-reference/modifiers/overloads.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
+- [Shadowing in Visual Basic](../programming-guide/language-features/declared-elements/shadowing.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
+- [Istruzione Sub](../language-reference/statements/sub-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
