--- a/docs/visual-basic/misc/bc30093.md
+++ b/docs/visual-basic/misc/bc30093.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30093
 ms.assetid: b0f1f7d5-0c33-4b97-8043-f0f5b40ca5d7
-ms.openlocfilehash: 6f5b265f59f27348c308fdc6acba2e9fac5d8313
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 56d69f36ccd52099affe2ff6b022390e169cdb0a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935876"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370362"
 ---
 # <a name="end-with-must-be-preceded-by-a-matching-with"></a>'End With' deve essere preceduto da un oggetto 'With' corrispondente
 Un'istruzione `End With` si verifica senza un'istruzione `With` corrispondente. `End With` deve essere preceduto da un'istruzione `With` corrispondente.  
@@ -29,4 +29,4 @@ Un'istruzione `End With` si verifica senza un'istruzione `With` corrispondente. 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione With...End With](../../visual-basic/language-reference/statements/with-end-with-statement.md)
+- [Istruzione With...End With](../language-reference/statements/with-end-with-statement.md)
