--- a/docs/visual-basic/misc/bc31523.md
+++ b/docs/visual-basic/misc/bc31523.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31523
 ms.assetid: 04c8a14f-9286-4f9a-aad5-a0555e5f09f4
-ms.openlocfilehash: bccbadb62e6f5db2a0e72edf2382bb8b301aba5e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5190a28a8f778915729fea5236f8b16756d4327c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61942766"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412143"
 ---
 # <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-declare"></a>Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a 'Declare'
 L'attributo `DllImportAttribute` è stato applicato a una funzione `Declare` . Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.  
@@ -26,4 +26,4 @@ L'attributo `DllImportAttribute` è stato applicato a una funzione `Declare` . Q
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [Istruzione Declare](../../visual-basic/language-reference/statements/declare-statement.md)
+- [Declare Statement](../language-reference/statements/declare-statement.md)
