--- a/docs/visual-basic/misc/bc32054.md
+++ b/docs/visual-basic/misc/bc32054.md
@@ -1,5 +1,5 @@
 ---
-title: "'<membername> ha lo stesso nome di un parametro di tipo"
+title: "' <membername> ha lo stesso nome di un parametro di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32054
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32054
 ms.assetid: 3e5e6e88-5f20-42f4-a525-771cabc836be
-ms.openlocfilehash: c716805521e5842274af3ba49f1b6d51c1e97bea
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 10db22a68a2c669c8772e38070ea93caf0e81f61
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618943"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412013"
 ---
-# <a name="membername-has-the-same-name-as-a-type-parameter"></a>'\<membername > ha lo stesso nome di un parametro di tipo
+# <a name="membername-has-the-same-name-as-a-type-parameter"></a>' \<membername> ha lo stesso nome di un parametro di tipo
 Un membro di una classe o struttura generica ha lo stesso nome di un parametro di tipo di quella classe o struttura.  
   
  Ogni variabile, costante, enumerazione, routine, proprietà, evento e delegato deve avere un nome diverso da qualsiasi parametro di tipo.  
@@ -27,5 +27,5 @@ Un membro di una classe o struttura generica ha lo stesso nome di un parametro d
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
