--- a/docs/visual-basic/misc/bc32102.md
+++ b/docs/visual-basic/misc/bc32102.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32102
 ms.assetid: f4ebd416-7fb9-4a24-a8df-e9ee7ccc2c76
-ms.openlocfilehash: eb1da4336cc51da1b7ea06b04e49f228aa1d228c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 97ccfaf73405d832684cbe7ca828048051e81b09
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913478"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413726"
 ---
 # <a name="structure-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a>Non è possibile specificare il vincolo 'Structure' più volte per lo stesso parametro di tipo
-Un elenco di vincoli include il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) più volte.  
+Un elenco di vincoli include il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) più volte.  
   
- Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
+ Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
   
  ID errore: BC32102  
   
@@ -27,5 +27,5 @@ Un elenco di vincoli include il vincolo [Structure (Visual Basic)](../../visual-
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
