--- a/docs/visual-basic/misc/bc40004.md
+++ b/docs/visual-basic/misc/bc40004.md
@@ -1,5 +1,5 @@
 ---
-title: <type1> «<membername>' è in conflitto con <type2> '<membername>' nella classe di base <type3> '<classname>' e deve essere dichiarato come 'Shadows'
+title: <type1>' <membername> ' è in conflitto con <type2> ' <membername> ' nella classe base <type3> ' <classname> ' e deve essere dichiarato ' Shadows '
 ms.date: 07/20/2015
 f1_keywords:
 - bc40004
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40004
 ms.assetid: 24d10f31-3b3d-448c-b928-fc937e1f4a92
-ms.openlocfilehash: 1fa84ef3b7dccc3e4c2aeebb3e2eb75d635a1c44
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 287a1ebb2bca6aca3b2a2f2ebad0ff55d85f0cb7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614405"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369271"
 ---
-# <a name="type1-membername-conflicts-with-type2-membername-on-the-base-class-type3-classname-and-should-be-declared-shadows"></a>\<type1 > '\<nomeMembro >' è in conflitto con \<type2 > '\<nomeMembro >' nella classe di base \<type3 > '\<NomeClasse >' e deve essere dichiarato come 'Shadows'
+# <a name="type1-membername-conflicts-with-type2-membername-on-the-base-class-type3-classname-and-should-be-declared-shadows"></a>\<type1>' \<membername> ' è in conflitto con \<type2> ' \<membername> ' nella classe base \<type3> ' \<classname> ' e deve essere dichiarato ' Shadows '
 Un elemento di programmazione è dichiarato con lo stesso nome di un elemento definito nella classe base. In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.  
   
  Si tratta di un messaggio di avviso. Per impostazione predefinita viene usato`Shadows` . Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
@@ -27,5 +27,5 @@ Un elemento di programmazione è dichiarato con lo stesso nome di un elemento de
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
-- [Shadowing in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
+- [Shadowing in Visual Basic](../programming-guide/language-features/declared-elements/shadowing.md)
