commit bilingual contents

--- a/docs/visual-basic/misc/bc30700.md
+++ b/docs/visual-basic/misc/bc30700.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30700
 ms.assetid: 0daf00b9-47c6-415a-b39a-b3e4fa86f2cc
-ms.openlocfilehash: a40c73cbc2ed1c9b698de97908f58db89bd36ad1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8f49f25174bb7fad10117b8a506a0e4d412338da
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646312"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412663"
 ---
-# <a name="side-effects-not-valid-during-expression-evaluation-in-this-context"></a><span data-ttu-id="c249c-102">Effetti secondari non validi durante la valutazione di espressioni in questo contesto</span><span class="sxs-lookup"><span data-stu-id="c249c-102">Side effects not valid during expression evaluation in this context</span></span>
-<span data-ttu-id="c249c-103">Le istruzioni che modificano lo stato di un oggetto non sono consentite in questo contesto.</span><span class="sxs-lookup"><span data-stu-id="c249c-103">Statements that change the state of an object are not allowed in this context.</span></span>  
+# <a name="side-effects-not-valid-during-expression-evaluation-in-this-context"></a><span data-ttu-id="da611-102">Effetti secondari non validi durante la valutazione di espressioni in questo contesto</span><span class="sxs-lookup"><span data-stu-id="da611-102">Side effects not valid during expression evaluation in this context</span></span>
+<span data-ttu-id="da611-103">Le istruzioni che modificano lo stato di un oggetto non sono consentite in questo contesto.</span><span class="sxs-lookup"><span data-stu-id="da611-103">Statements that change the state of an object are not allowed in this context.</span></span>  
   
- <span data-ttu-id="c249c-104">**ID errore:** BC30700</span><span class="sxs-lookup"><span data-stu-id="c249c-104">**Error ID:** BC30700</span></span>  
+ <span data-ttu-id="da611-104">**ID errore:** BC30700</span><span class="sxs-lookup"><span data-stu-id="da611-104">**Error ID:** BC30700</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c249c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c249c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="da611-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="da611-105">To correct this error</span></span>  
   
-- <span data-ttu-id="c249c-106">Modificare il codice in modo che la valutazione delle istruzioni non implichi la modifica dello stato degli altri elementi.</span><span class="sxs-lookup"><span data-stu-id="c249c-106">Change your code so that statements are evaluated without changing the state of other items.</span></span>  
+- <span data-ttu-id="da611-106">Modificare il codice in modo che la valutazione delle istruzioni non implichi la modifica dello stato degli altri elementi.</span><span class="sxs-lookup"><span data-stu-id="da611-106">Change your code so that statements are evaluated without changing the state of other items.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c249c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c249c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="da611-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="da611-107">See also</span></span>
 
-- [<span data-ttu-id="c249c-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="c249c-108">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="da611-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="da611-108">Nothing</span></span>](../language-reference/nothing.md)
