--- a/docs/visual-basic/misc/bc31523.md
+++ b/docs/visual-basic/misc/bc31523.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31523
 ms.assetid: 04c8a14f-9286-4f9a-aad5-a0555e5f09f4
-ms.openlocfilehash: bccbadb62e6f5db2a0e72edf2382bb8b301aba5e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5190a28a8f778915729fea5236f8b16756d4327c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61942766"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412143"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-declare"></a><span data-ttu-id="99604-102">Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a 'Declare'</span><span class="sxs-lookup"><span data-stu-id="99604-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a 'Declare'</span></span>
-<span data-ttu-id="99604-103">L'attributo `DllImportAttribute` è stato applicato a una funzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="99604-103">The `DllImportAttribute` attribute was applied to a `Declare` function.</span></span> <span data-ttu-id="99604-104">Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.</span><span class="sxs-lookup"><span data-stu-id="99604-104">This attribute can only be used with an empty `Function` or `Sub`.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-declare"></a><span data-ttu-id="f02c6-102">Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a 'Declare'</span><span class="sxs-lookup"><span data-stu-id="f02c6-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a 'Declare'</span></span>
+<span data-ttu-id="f02c6-103">L'attributo `DllImportAttribute` è stato applicato a una funzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="f02c6-103">The `DllImportAttribute` attribute was applied to a `Declare` function.</span></span> <span data-ttu-id="f02c6-104">Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.</span><span class="sxs-lookup"><span data-stu-id="f02c6-104">This attribute can only be used with an empty `Function` or `Sub`.</span></span>  
   
- <span data-ttu-id="99604-105">**ID errore:** BC31523</span><span class="sxs-lookup"><span data-stu-id="99604-105">**Error ID:** BC31523</span></span>  
+ <span data-ttu-id="f02c6-105">**ID errore:** BC31523</span><span class="sxs-lookup"><span data-stu-id="f02c6-105">**Error ID:** BC31523</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="99604-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="99604-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f02c6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f02c6-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="99604-107">Rimuovere l'attributo `DllImportAttribute` dall'istruzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="99604-107">Remove the `DllImportAttribute` attribute from the `Declare` statement.</span></span>  
+1. <span data-ttu-id="f02c6-107">Rimuovere l'attributo `DllImportAttribute` dall'istruzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="f02c6-107">Remove the `DllImportAttribute` attribute from the `Declare` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="99604-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="99604-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f02c6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f02c6-108">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [<span data-ttu-id="99604-109">Istruzione Declare</span><span class="sxs-lookup"><span data-stu-id="99604-109">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+- [<span data-ttu-id="f02c6-109">Declare Statement</span><span class="sxs-lookup"><span data-stu-id="f02c6-109">Declare Statement</span></span>](../language-reference/statements/declare-statement.md)
