--- a/docs/visual-basic/misc/bc32065.md
+++ b/docs/visual-basic/misc/bc32065.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32065
 ms.assetid: 94cfe3de-74fd-4a2c-9246-ec4a05b73d55
-ms.openlocfilehash: 1bf9fab02f7ea6f8a8fe68848f3d2295e4f2ca92
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9092633be3c52625d35c64dde70bdd746d499f38
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618739"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411935"
 ---
-# <a name="type-parameters-cannot-be-specified-on-this-declaration"></a><span data-ttu-id="2907b-102">I parametri di tipo non possono essere specificati in questa dichiarazione</span><span class="sxs-lookup"><span data-stu-id="2907b-102">Type parameters cannot be specified on this declaration</span></span>
-<span data-ttu-id="2907b-103">Un elemento di programmazione è dichiarato con un elenco di parametri di tipo, ma l'elemento di programmazione non è idoneo come tipo generico.</span><span class="sxs-lookup"><span data-stu-id="2907b-103">A programming element is declared with a type parameter list, but the programming element is not eligible to be a generic type.</span></span>  
+# <a name="type-parameters-cannot-be-specified-on-this-declaration"></a><span data-ttu-id="6c6a0-102">I parametri di tipo non possono essere specificati in questa dichiarazione</span><span class="sxs-lookup"><span data-stu-id="6c6a0-102">Type parameters cannot be specified on this declaration</span></span>
+<span data-ttu-id="6c6a0-103">Un elemento di programmazione è dichiarato con un elenco di parametri di tipo, ma l'elemento di programmazione non è idoneo come tipo generico.</span><span class="sxs-lookup"><span data-stu-id="6c6a0-103">A programming element is declared with a type parameter list, but the programming element is not eligible to be a generic type.</span></span>  
   
- <span data-ttu-id="2907b-104">Gli elementi di programmazione non idonei come generici includono proprietà, operatori, eventi e costruttori.</span><span class="sxs-lookup"><span data-stu-id="2907b-104">Programming elements that are not eligible to be generic include properties, operators, events, and constructors.</span></span> <span data-ttu-id="2907b-105">Se uno di questi elementi viene dichiarato con un elenco di parametri di tipo, viene generato questo errore.</span><span class="sxs-lookup"><span data-stu-id="2907b-105">Declaring any of these elements with a type parameter list results in this error.</span></span>  
+ <span data-ttu-id="6c6a0-104">Gli elementi di programmazione non idonei come generici includono proprietà, operatori, eventi e costruttori.</span><span class="sxs-lookup"><span data-stu-id="6c6a0-104">Programming elements that are not eligible to be generic include properties, operators, events, and constructors.</span></span> <span data-ttu-id="6c6a0-105">Se uno di questi elementi viene dichiarato con un elenco di parametri di tipo, viene generato questo errore.</span><span class="sxs-lookup"><span data-stu-id="6c6a0-105">Declaring any of these elements with a type parameter list results in this error.</span></span>  
   
- <span data-ttu-id="2907b-106">**ID errore:** BC32065</span><span class="sxs-lookup"><span data-stu-id="2907b-106">**Error ID:** BC32065</span></span>  
+ <span data-ttu-id="6c6a0-106">**ID errore:** BC32065</span><span class="sxs-lookup"><span data-stu-id="6c6a0-106">**Error ID:** BC32065</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2907b-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2907b-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6c6a0-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6c6a0-107">To correct this error</span></span>  
   
-- <span data-ttu-id="2907b-108">Rimuovere la parola chiave `Of` e i parametri di tipo dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="2907b-108">Remove the `Of` keyword and the type parameters from the declaration.</span></span>  
+- <span data-ttu-id="6c6a0-108">Rimuovere la parola chiave `Of` e i parametri di tipo dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="6c6a0-108">Remove the `Of` keyword and the type parameters from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2907b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2907b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6c6a0-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6c6a0-109">See also</span></span>
 
-- [<span data-ttu-id="2907b-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2907b-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="2907b-111">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="2907b-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="6c6a0-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6c6a0-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="6c6a0-111">Type List</span><span class="sxs-lookup"><span data-stu-id="6c6a0-111">Type List</span></span>](../language-reference/statements/type-list.md)
