--- a/docs/visual-basic/misc/bc2009.md
+++ b/docs/visual-basic/misc/bc2009.md
@@ -1,5 +1,5 @@
 ---
-title: opzione <optionname> può essere seguita solo da '+' o '-'
+title: L'opzione <optionname> può essere seguita solo da '+' o da '-'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2009
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC2009
 ms.assetid: 90e5dcf9-37fb-4a97-9f53-4e7c73d6ba9f
-ms.openlocfilehash: 4d814750129d61676f2de16cb772b9ba2df5e7fa
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 23455b30aa862ad473e35b63bd295d78da8a591c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658678"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367373"
 ---
-# <a name="option-optionname-can-be-followed-only-by--or--"></a><span data-ttu-id="a7403-102">opzione \<nomeopzione > può essere seguita solo da '+' o '-'</span><span class="sxs-lookup"><span data-stu-id="a7403-102">option \<optionname> can be followed only by '+' or '-'</span></span>
-<span data-ttu-id="a7403-103">Il testo che segue l'opzione non è un segno più (+) o un segno meno (-).</span><span class="sxs-lookup"><span data-stu-id="a7403-103">The text that follows the option is not a plus sign (+) or a minus sign (-).</span></span>  
+# <a name="option-optionname-can-be-followed-only-by--or--"></a><span data-ttu-id="e6ba7-102">L'opzione \<optionname> può essere seguita solo da '+' o da '-'</span><span class="sxs-lookup"><span data-stu-id="e6ba7-102">option \<optionname> can be followed only by '+' or '-'</span></span>
+<span data-ttu-id="e6ba7-103">Il testo che segue l'opzione non è un segno più (+) o un segno meno (-).</span><span class="sxs-lookup"><span data-stu-id="e6ba7-103">The text that follows the option is not a plus sign (+) or a minus sign (-).</span></span>  
   
- <span data-ttu-id="a7403-104">**ID errore:** BC2009</span><span class="sxs-lookup"><span data-stu-id="a7403-104">**Error ID:** BC2009</span></span>  
+ <span data-ttu-id="e6ba7-104">**ID errore:** BC2009</span><span class="sxs-lookup"><span data-stu-id="e6ba7-104">**Error ID:** BC2009</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a7403-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a7403-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e6ba7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e6ba7-105">To correct this error</span></span>  
   
-- <span data-ttu-id="a7403-106">Sostituire il testo che segue l'opzione con un segno più (+) per attivare l'opzione.</span><span class="sxs-lookup"><span data-stu-id="a7403-106">Replace the text that follows the option with a plus sign (+) to turn the option on.</span></span>  
+- <span data-ttu-id="e6ba7-106">Sostituire il testo che segue l'opzione con un segno più (+) per attivare l'opzione.</span><span class="sxs-lookup"><span data-stu-id="e6ba7-106">Replace the text that follows the option with a plus sign (+) to turn the option on.</span></span>  
   
-     <span data-ttu-id="a7403-107">oppure</span><span class="sxs-lookup"><span data-stu-id="a7403-107">— or —</span></span>  
+     <span data-ttu-id="e6ba7-107">- o -</span><span class="sxs-lookup"><span data-stu-id="e6ba7-107">— or —</span></span>  
   
-- <span data-ttu-id="a7403-108">Sostituire il testo che segue l'opzione con un segno meno (-) per disattivare l'opzione.</span><span class="sxs-lookup"><span data-stu-id="a7403-108">Replace the text that follows the option with a minus sign (-) to turn the option off.</span></span>  
+- <span data-ttu-id="e6ba7-108">Sostituire il testo che segue l'opzione con un segno meno (-) per disattivare l'opzione.</span><span class="sxs-lookup"><span data-stu-id="e6ba7-108">Replace the text that follows the option with a minus sign (-) to turn the option off.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a7403-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a7403-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e6ba7-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e6ba7-109">See also</span></span>
 
-- [<span data-ttu-id="a7403-110">Opzioni del compilatore Visual Basic in ordine alfabetico</span><span class="sxs-lookup"><span data-stu-id="a7403-110">Visual Basic Compiler Options Listed Alphabetically</span></span>](../../visual-basic/reference/command-line-compiler/compiler-options-listed-alphabetically.md)
-- [<span data-ttu-id="a7403-111">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="a7403-111">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+- [<span data-ttu-id="e6ba7-110">Opzioni del compilatore Visual Basic in ordine alfabetico</span><span class="sxs-lookup"><span data-stu-id="e6ba7-110">Visual Basic Compiler Options Listed Alphabetically</span></span>](../reference/command-line-compiler/compiler-options-listed-alphabetically.md)
+- [<span data-ttu-id="e6ba7-111">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="e6ba7-111">Error Types</span></span>](../programming-guide/language-features/error-types.md)
