--- a/docs/visual-basic/misc/bc2023.md
+++ b/docs/visual-basic/misc/bc2023.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC2023
 ms.assetid: 60914807-1fde-4fef-9c6f-6f4a62527eed
-ms.openlocfilehash: d8ccb2b078f8bdeb3de27e6d25603925f1de9357
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: ccd87e148cff6502a33390d1f59096891c3ab530
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366957"
 ---
-# <a name="cannot-specify-both-win32icon-and-win32resource"></a><span data-ttu-id="c1a3b-102">non è possibile specificare sia /win32icon che /win32resource</span><span class="sxs-lookup"><span data-stu-id="c1a3b-102">Cannot specify both /win32icon and /win32resource</span></span>
-<span data-ttu-id="c1a3b-103">Le opzioni `/win32resource` e `/win32icon` si escludono a vicenda perché entrambe inseriscono informazioni sulle icone nel file di output.</span><span class="sxs-lookup"><span data-stu-id="c1a3b-103">The `/win32resource` and `/win32icon` options are mutually exclusive, because they both insert icons information into the output file.</span></span>  
+# <a name="cannot-specify-both-win32icon-and-win32resource"></a><span data-ttu-id="1cbdd-102">non è possibile specificare sia /win32icon che /win32resource</span><span class="sxs-lookup"><span data-stu-id="1cbdd-102">Cannot specify both /win32icon and /win32resource</span></span>
+<span data-ttu-id="1cbdd-103">Le opzioni `/win32resource` e `/win32icon` si escludono a vicenda perché entrambe inseriscono informazioni sulle icone nel file di output.</span><span class="sxs-lookup"><span data-stu-id="1cbdd-103">The `/win32resource` and `/win32icon` options are mutually exclusive, because they both insert icons information into the output file.</span></span>  
   
- <span data-ttu-id="c1a3b-104">**ID errore:** BC2023</span><span class="sxs-lookup"><span data-stu-id="c1a3b-104">**Error ID:** BC2023</span></span>  
+ <span data-ttu-id="1cbdd-104">**ID errore:** BC2023</span><span class="sxs-lookup"><span data-stu-id="1cbdd-104">**Error ID:** BC2023</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c1a3b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1a3b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1cbdd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1cbdd-105">To correct this error</span></span>  
   
-- <span data-ttu-id="c1a3b-106">Usare solo l'opzione `/win32icon` per inserire un file ICO nel file di output.</span><span class="sxs-lookup"><span data-stu-id="c1a3b-106">Use only the `/win32icon` option to insert an .ico file in the output file.</span></span> <span data-ttu-id="c1a3b-107">Il file ICO rappresenta il file di output in Esplora risorse.</span><span class="sxs-lookup"><span data-stu-id="c1a3b-107">This .ico file represents the output file in Windows Explorer.</span></span>  
+- <span data-ttu-id="1cbdd-106">Usare solo l'opzione `/win32icon` per inserire un file ICO nel file di output.</span><span class="sxs-lookup"><span data-stu-id="1cbdd-106">Use only the `/win32icon` option to insert an .ico file in the output file.</span></span> <span data-ttu-id="1cbdd-107">Il file ICO rappresenta il file di output in Esplora risorse.</span><span class="sxs-lookup"><span data-stu-id="1cbdd-107">This .ico file represents the output file in Windows Explorer.</span></span>  
   
-     <span data-ttu-id="c1a3b-108">oppure</span><span class="sxs-lookup"><span data-stu-id="c1a3b-108">— or —</span></span>  
+     <span data-ttu-id="1cbdd-108">- o -</span><span class="sxs-lookup"><span data-stu-id="1cbdd-108">— or —</span></span>  
   
-- <span data-ttu-id="c1a3b-109">Usare solo l'opzione `/win32resource` per inserire un file di risorse Win32 nel file di output.</span><span class="sxs-lookup"><span data-stu-id="c1a3b-109">Use only the `/win32resource` option to insert a Win32 resource file in the output file.</span></span> <span data-ttu-id="c1a3b-110">Una risorsa Win32 può contenere informazioni sulla versione o sulla bitmap (icona) che consentono di identificare l'applicazione in Esplora risorse.</span><span class="sxs-lookup"><span data-stu-id="c1a3b-110">A Win32 resource can contain version or bitmap (icon) information that helps identify your application in Windows Explorer.</span></span>  
+- <span data-ttu-id="1cbdd-109">Usare solo l'opzione `/win32resource` per inserire un file di risorse Win32 nel file di output.</span><span class="sxs-lookup"><span data-stu-id="1cbdd-109">Use only the `/win32resource` option to insert a Win32 resource file in the output file.</span></span> <span data-ttu-id="1cbdd-110">Una risorsa Win32 può contenere informazioni sulla versione o sulla bitmap (icona) che consentono di identificare l'applicazione in Esplora risorse.</span><span class="sxs-lookup"><span data-stu-id="1cbdd-110">A Win32 resource can contain version or bitmap (icon) information that helps identify your application in Windows Explorer.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c1a3b-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1a3b-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1cbdd-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1cbdd-111">See also</span></span>
 
-- [<span data-ttu-id="c1a3b-112">-win32icon</span><span class="sxs-lookup"><span data-stu-id="c1a3b-112">-win32icon</span></span>](../../visual-basic/reference/command-line-compiler/win32icon.md)
-- [<span data-ttu-id="c1a3b-113">-win32resource</span><span class="sxs-lookup"><span data-stu-id="c1a3b-113">-win32resource</span></span>](../../visual-basic/reference/command-line-compiler/win32resource.md)
+- [<span data-ttu-id="1cbdd-112">-win32icon</span><span class="sxs-lookup"><span data-stu-id="1cbdd-112">-win32icon</span></span>](../reference/command-line-compiler/win32icon.md)
+- [<span data-ttu-id="1cbdd-113">-win32resource</span><span class="sxs-lookup"><span data-stu-id="1cbdd-113">-win32resource</span></span>](../reference/command-line-compiler/win32resource.md)
