--- a/docs/visual-basic/misc/bc2025.md
+++ b/docs/visual-basic/misc/bc2025.md
@@ -1,5 +1,5 @@
 ---
-title: L'opzione-noconfig è stata ignorata perché è stata specificata in un file di risposta
+title: Opzione -noconfig ignorata perché specificata in un file di risposta
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2025
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC2025
 ms.assetid: 87fb393d-e17f-4e50-8d98-d9dfeba30c3e
-ms.openlocfilehash: de421bb4a63fd5f43ce9ca035d6b10d0333c1bda
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: e0c0b29018eb68242b32d1c5b0b69d3a2003b399
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775410"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366931"
 ---
-# <a name="ignoring-noconfig-option-because-it-was-specified-in-a-response-file"></a><span data-ttu-id="b0432-102">Opzione /noconfig ignorata perché specificata in un file di risposta</span><span class="sxs-lookup"><span data-stu-id="b0432-102">Ignoring /noconfig option because it was specified in a response file</span></span>
-<span data-ttu-id="b0432-103">L'opzione `/noconfig` indica al compilatore di non compilare con il file Vbc.rsp.</span><span class="sxs-lookup"><span data-stu-id="b0432-103">The `/noconfig` option tells the compiler not to compile with the Vbc.rsp file.</span></span> <span data-ttu-id="b0432-104">Tuttavia, il compilatore elabora il file Vbc.rsp prima di elaborare qualsiasi altro file di risposta, quindi non può soddisfare l'opzione `/noconfig` in un file di risposta.</span><span class="sxs-lookup"><span data-stu-id="b0432-104">However, the compiler processes the Vbc.rsp file before processing any other response files, so the compiler cannot honor the `/noconfig` option in a response file.</span></span>  
+# <a name="ignoring-noconfig-option-because-it-was-specified-in-a-response-file"></a><span data-ttu-id="b4e5e-102">Opzione /noconfig ignorata perché specificata in un file di risposta</span><span class="sxs-lookup"><span data-stu-id="b4e5e-102">Ignoring /noconfig option because it was specified in a response file</span></span>
+<span data-ttu-id="b4e5e-103">L'opzione `/noconfig` indica al compilatore di non compilare con il file Vbc.rsp.</span><span class="sxs-lookup"><span data-stu-id="b4e5e-103">The `/noconfig` option tells the compiler not to compile with the Vbc.rsp file.</span></span> <span data-ttu-id="b4e5e-104">Tuttavia, il compilatore elabora il file Vbc.rsp prima di elaborare qualsiasi altro file di risposta, quindi non può soddisfare l'opzione `/noconfig` in un file di risposta.</span><span class="sxs-lookup"><span data-stu-id="b4e5e-104">However, the compiler processes the Vbc.rsp file before processing any other response files, so the compiler cannot honor the `/noconfig` option in a response file.</span></span>  
   
- <span data-ttu-id="b0432-105">**ID errore:** BC2025</span><span class="sxs-lookup"><span data-stu-id="b0432-105">**Error ID:** BC2025</span></span>  
+ <span data-ttu-id="b4e5e-105">**ID errore:** BC2025</span><span class="sxs-lookup"><span data-stu-id="b4e5e-105">**Error ID:** BC2025</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b0432-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b0432-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b4e5e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4e5e-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="b0432-107">Rimuovere l'opzione `/noconfig` dal file di risposta.</span><span class="sxs-lookup"><span data-stu-id="b0432-107">Remove the `/noconfig` option from the response file.</span></span>  
+1. <span data-ttu-id="b4e5e-107">Rimuovere l'opzione `/noconfig` dal file di risposta.</span><span class="sxs-lookup"><span data-stu-id="b4e5e-107">Remove the `/noconfig` option from the response file.</span></span>  
   
-2. <span data-ttu-id="b0432-108">Specificare l'opzione `/noconfig` quando si richiama il compilatore della riga di comando.</span><span class="sxs-lookup"><span data-stu-id="b0432-108">Specify the `/noconfig` option when invoking the command-line compiler.</span></span>  
+2. <span data-ttu-id="b4e5e-108">Specificare l'opzione `/noconfig` quando si richiama il compilatore della riga di comando.</span><span class="sxs-lookup"><span data-stu-id="b4e5e-108">Specify the `/noconfig` option when invoking the command-line compiler.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b0432-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b0432-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b4e5e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4e5e-109">See also</span></span>
 
-- [<span data-ttu-id="b0432-110">-noconfig</span><span class="sxs-lookup"><span data-stu-id="b0432-110">-noconfig</span></span>](../../visual-basic/reference/command-line-compiler/noconfig.md)
-- [<span data-ttu-id="b0432-111">@ (Specifica di un file di risposta)</span><span class="sxs-lookup"><span data-stu-id="b0432-111">@ (Specify Response File)</span></span>](../../visual-basic/reference/command-line-compiler/specify-response-file.md)
+- [<span data-ttu-id="b4e5e-110">-noconfig</span><span class="sxs-lookup"><span data-stu-id="b4e5e-110">-noconfig</span></span>](../reference/command-line-compiler/noconfig.md)
+- [<span data-ttu-id="b4e5e-111">@ (Specifica di un file di risposta)</span><span class="sxs-lookup"><span data-stu-id="b4e5e-111">@ (Specify Response File)</span></span>](../reference/command-line-compiler/specify-response-file.md)
