--- a/docs/visual-basic/misc/bc30093.md
+++ b/docs/visual-basic/misc/bc30093.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30093
 ms.assetid: b0f1f7d5-0c33-4b97-8043-f0f5b40ca5d7
-ms.openlocfilehash: 6f5b265f59f27348c308fdc6acba2e9fac5d8313
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 56d69f36ccd52099affe2ff6b022390e169cdb0a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935876"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370362"
 ---
-# <a name="end-with-must-be-preceded-by-a-matching-with"></a><span data-ttu-id="21072-102">'End With' deve essere preceduto da un oggetto 'With' corrispondente</span><span class="sxs-lookup"><span data-stu-id="21072-102">'End With' must be preceded by a matching 'With'</span></span>
-<span data-ttu-id="21072-103">Un'istruzione `End With` si verifica senza un'istruzione `With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="21072-103">An `End With` statement occurs without a corresponding `With` statement.</span></span> <span data-ttu-id="21072-104">`End With` deve essere preceduto da un'istruzione `With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="21072-104">`End With` must be preceded by a corresponding `With` statement.</span></span>  
+# <a name="end-with-must-be-preceded-by-a-matching-with"></a><span data-ttu-id="ab455-102">'End With' deve essere preceduto da un oggetto 'With' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ab455-102">'End With' must be preceded by a matching 'With'</span></span>
+<span data-ttu-id="ab455-103">Un'istruzione `End With` si verifica senza un'istruzione `With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="ab455-103">An `End With` statement occurs without a corresponding `With` statement.</span></span> <span data-ttu-id="ab455-104">`End With` deve essere preceduto da un'istruzione `With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="ab455-104">`End With` must be preceded by a corresponding `With` statement.</span></span>  
   
- <span data-ttu-id="21072-105">**ID errore:** BC30093</span><span class="sxs-lookup"><span data-stu-id="21072-105">**Error ID:** BC30093</span></span>  
+ <span data-ttu-id="ab455-105">**ID errore:** BC30093</span><span class="sxs-lookup"><span data-stu-id="ab455-105">**Error ID:** BC30093</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="21072-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="21072-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ab455-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ab455-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="21072-107">Se questo blocco `With` fa parte di un set di blocchi `With` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="21072-107">If this `With` block is part of a set of nested `With` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="ab455-107">Se questo blocco `With` fa parte di un set di blocchi `With` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="ab455-107">If this `With` block is part of a set of nested `With` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="21072-108">Verificare che le altre strutture di controllo all'interno del blocco `With` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="21072-108">Verify that other control structures within the `With` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="ab455-108">Verificare che le altre strutture di controllo all'interno del blocco `With` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="ab455-108">Verify that other control structures within the `With` block are correctly terminated.</span></span>  
   
-3. <span data-ttu-id="21072-109">Verificare che il blocco `With` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="21072-109">Ensure that this `With` block is correctly formatted.</span></span>  
+3. <span data-ttu-id="ab455-109">Verificare che il blocco `With` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="ab455-109">Ensure that this `With` block is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="21072-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="21072-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ab455-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ab455-110">See also</span></span>
 
-- [<span data-ttu-id="21072-111">Istruzione With...End With</span><span class="sxs-lookup"><span data-stu-id="21072-111">With...End With Statement</span></span>](../../visual-basic/language-reference/statements/with-end-with-statement.md)
+- [<span data-ttu-id="ab455-111">Istruzione With...End With</span><span class="sxs-lookup"><span data-stu-id="ab455-111">With...End With Statement</span></span>](../language-reference/statements/with-end-with-statement.md)
