--- a/docs/visual-basic/misc/bc30210.md
+++ b/docs/visual-basic/misc/bc30210.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30210
 ms.assetid: 4d217e56-0eac-4834-bcad-234a69809390
-ms.openlocfilehash: 81c78403d321731349787c77e8149ecc492e6945
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d63c162dc23c3679731ef007cb764e355afa3978
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028083"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409192"
 ---
-# <a name="option-strict-on-requires-all-function-property-and-operator-declarations-to-have-an-as-clause"></a><span data-ttu-id="4c874-102">Option Strict On richiede che tutte le dichiarazioni di funzioni, di proprietà e di operatori abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="4c874-102">Option Strict On requires all Function, Property, and Operator declarations to have an 'As' clause</span></span>
-<span data-ttu-id="4c874-103">Una dichiarazione contiene una proprietà dichiarata o un valore restituito da una funzione senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="4c874-103">A declaration contains a declared property or function return without an `As` clause.</span></span> <span data-ttu-id="4c874-104">Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.</span><span class="sxs-lookup"><span data-stu-id="4c874-104">When `Option Strict` is `On`, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Dim MyNum As Short`.</span></span>  
+# <a name="option-strict-on-requires-all-function-property-and-operator-declarations-to-have-an-as-clause"></a><span data-ttu-id="ddd7e-102">Option Strict On richiede che tutte le dichiarazioni di funzioni, di proprietà e di operatori abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="ddd7e-102">Option Strict On requires all Function, Property, and Operator declarations to have an 'As' clause</span></span>
+<span data-ttu-id="ddd7e-103">Una dichiarazione contiene una proprietà dichiarata o un valore restituito da una funzione senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="ddd7e-103">A declaration contains a declared property or function return without an `As` clause.</span></span> <span data-ttu-id="ddd7e-104">Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.</span><span class="sxs-lookup"><span data-stu-id="ddd7e-104">When `Option Strict` is `On`, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Dim MyNum As Short`.</span></span>  
   
- <span data-ttu-id="4c874-105">**ID errore:** BC30210</span><span class="sxs-lookup"><span data-stu-id="4c874-105">**Error ID:** BC30210</span></span>  
+ <span data-ttu-id="ddd7e-105">**ID errore:** BC30210</span><span class="sxs-lookup"><span data-stu-id="ddd7e-105">**Error ID:** BC30210</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4c874-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4c874-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ddd7e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ddd7e-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="4c874-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="4c874-107">Check to see if the `As` keyword is misspelled.</span></span>  
+1. <span data-ttu-id="ddd7e-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="ddd7e-107">Check to see if the `As` keyword is misspelled.</span></span>  
   
-2. <span data-ttu-id="4c874-108">Fornire una clausola `As` per la proprietà dichiarata o il valore restituito dalla funzione oppure attivare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="4c874-108">Supply an `As` clause for the declared property or function return, or turn `Option Strict Off`.</span></span>  
+2. <span data-ttu-id="ddd7e-108">Fornire una clausola `As` per la proprietà dichiarata o il valore restituito dalla funzione oppure attivare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="ddd7e-108">Supply an `As` clause for the declared property or function return, or turn `Option Strict Off`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4c874-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4c874-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ddd7e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ddd7e-109">See also</span></span>
 
-- [<span data-ttu-id="4c874-110">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="4c874-110">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [<span data-ttu-id="4c874-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="4c874-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [<span data-ttu-id="4c874-112">Routine Function</span><span class="sxs-lookup"><span data-stu-id="4c874-112">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="ddd7e-110">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="ddd7e-110">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="ddd7e-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="ddd7e-111">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="ddd7e-112">Routine Function</span><span class="sxs-lookup"><span data-stu-id="ddd7e-112">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
