--- a/docs/visual-basic/misc/bc30490.md
+++ b/docs/visual-basic/misc/bc30490.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile combinare 'Default' con '<specifier>'
+title: Non è possibile combinare ' default ' con ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30490
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30490
 ms.assetid: fb29622c-a176-4185-94ae-2c1ca85adddb
-ms.openlocfilehash: 25c732f543960c6ff1d451b9a7a73e951ab85aa6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 68aa51246d5611926512b3f9c2e940e90609b4e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620629"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411317"
 ---
-# <a name="default-cannot-be-combined-with-specifier"></a><span data-ttu-id="4d34b-102">Non è possibile combinare 'Default' con '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="4d34b-102">'Default' cannot be combined with '\<specifier>'</span></span>
-<span data-ttu-id="4d34b-103">Si è provato a combinare la parola chiave `Default` con un identificatore non valido in questo contesto, ad esempio `Shared` o `Private`.</span><span class="sxs-lookup"><span data-stu-id="4d34b-103">You have attempted to combine the `Default` keyword with a specifier, such as `Shared` or `Private`, that is not valid in this context.</span></span>  
+# <a name="default-cannot-be-combined-with-specifier"></a><span data-ttu-id="631ef-102">Non è possibile combinare ' default ' con ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="631ef-102">'Default' cannot be combined with '\<specifier>'</span></span>
+<span data-ttu-id="631ef-103">Si è provato a combinare la parola chiave `Default` con un identificatore non valido in questo contesto, ad esempio `Shared` o `Private`.</span><span class="sxs-lookup"><span data-stu-id="631ef-103">You have attempted to combine the `Default` keyword with a specifier, such as `Shared` or `Private`, that is not valid in this context.</span></span>  
   
- <span data-ttu-id="4d34b-104">**ID errore:** BC30490</span><span class="sxs-lookup"><span data-stu-id="4d34b-104">**Error ID:** BC30490</span></span>  
+ <span data-ttu-id="631ef-104">**ID errore:** BC30490</span><span class="sxs-lookup"><span data-stu-id="631ef-104">**Error ID:** BC30490</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4d34b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4d34b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="631ef-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="631ef-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4d34b-106">Rimuovere `Default`.</span><span class="sxs-lookup"><span data-stu-id="4d34b-106">Remove `Default`.</span></span>  
+- <span data-ttu-id="631ef-106">Rimuovere `Default`.</span><span class="sxs-lookup"><span data-stu-id="631ef-106">Remove `Default`.</span></span>  
   
-     <span data-ttu-id="4d34b-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="4d34b-107">-or-</span></span>  
+     <span data-ttu-id="631ef-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="631ef-107">-or-</span></span>  
   
-- <span data-ttu-id="4d34b-108">Rimuovere l'identificatore in conflitto.</span><span class="sxs-lookup"><span data-stu-id="4d34b-108">Remove the conflicting specifier.</span></span>  
+- <span data-ttu-id="631ef-108">Rimuovere l'identificatore in conflitto.</span><span class="sxs-lookup"><span data-stu-id="631ef-108">Remove the conflicting specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4d34b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4d34b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="631ef-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="631ef-109">See also</span></span>
 
-- [<span data-ttu-id="4d34b-110">Default</span><span class="sxs-lookup"><span data-stu-id="4d34b-110">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+- [<span data-ttu-id="631ef-110">Default</span><span class="sxs-lookup"><span data-stu-id="631ef-110">Default</span></span>](../language-reference/modifiers/default.md)
