--- a/docs/visual-basic/misc/bc30581.md
+++ b/docs/visual-basic/misc/bc30581.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione 'AddressOf' non può essere convertito in '<typename>'perché'<typename>' non è un tipo delegato
+title: L'espressione 'AddressOf' non può essere convertita in '<typename>' perché '<typename>' non è un tipo delegato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30581
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30581
 ms.assetid: 5db7589a-5456-4b3a-9d6b-93d9157f0484
-ms.openlocfilehash: ece7dc6fdde81e05b86002337f250d0e9f7d2bbf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 68c74e87cb609e0bdfb6ed0552ba15c4eaef9ed3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621069"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370011"
 ---
-# <a name="addressof-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a><span data-ttu-id="bba0d-102">Espressione 'AddressOf' non può essere convertito in '\<nomeTipo >' perché '\<nomeTipo >' non è un tipo delegato</span><span class="sxs-lookup"><span data-stu-id="bba0d-102">'AddressOf' expression cannot be converted to '\<typename>' because '\<typename>' is not a delegate type</span></span>
-<span data-ttu-id="bba0d-103">Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che non è un tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="bba0d-103">A statement attempts to convert an `AddressOf` expression to a type that is not a delegate type.</span></span>  
+# <a name="addressof-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a><span data-ttu-id="a7300-102">L'espressione 'AddressOf' non può essere convertita in '\<typename>' perché '\<typename>' non è un tipo delegato</span><span class="sxs-lookup"><span data-stu-id="a7300-102">'AddressOf' expression cannot be converted to '\<typename>' because '\<typename>' is not a delegate type</span></span>
+<span data-ttu-id="a7300-103">Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che non è un tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="a7300-103">A statement attempts to convert an `AddressOf` expression to a type that is not a delegate type.</span></span>  
   
- <span data-ttu-id="bba0d-104">L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica.</span><span class="sxs-lookup"><span data-stu-id="bba0d-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span> <span data-ttu-id="bba0d-105">`AddressOf` può essere usato come operando di un costruttore di delegato o può essere usato in un contesto in cui il tipo del delegato può essere determinato dal compilatore.</span><span class="sxs-lookup"><span data-stu-id="bba0d-105">`AddressOf` can be used as the operand of a delegate constructor, or it can be used in a context in which the type of the delegate can be determined by the compiler.</span></span>  
+ <span data-ttu-id="a7300-104">L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica.</span><span class="sxs-lookup"><span data-stu-id="a7300-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span> <span data-ttu-id="a7300-105">`AddressOf` può essere usato come operando di un costruttore di delegato o può essere usato in un contesto in cui il tipo del delegato può essere determinato dal compilatore.</span><span class="sxs-lookup"><span data-stu-id="a7300-105">`AddressOf` can be used as the operand of a delegate constructor, or it can be used in a context in which the type of the delegate can be determined by the compiler.</span></span>  
   
- <span data-ttu-id="bba0d-106">**ID errore:** BC30581</span><span class="sxs-lookup"><span data-stu-id="bba0d-106">**Error ID:** BC30581</span></span>  
+ <span data-ttu-id="a7300-106">**ID errore:** BC30581</span><span class="sxs-lookup"><span data-stu-id="a7300-106">**Error ID:** BC30581</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bba0d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bba0d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a7300-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a7300-107">To correct this error</span></span>  
   
-- <span data-ttu-id="bba0d-108">Modificare il tipo di destinazione in un tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="bba0d-108">Change the target type to a delegate type.</span></span>  
+- <span data-ttu-id="a7300-108">Modificare il tipo di destinazione in un tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="a7300-108">Change the target type to a delegate type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bba0d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bba0d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a7300-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a7300-109">See also</span></span>
 
-- [<span data-ttu-id="bba0d-110">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="bba0d-110">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [<span data-ttu-id="a7300-110">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="a7300-110">AddressOf Operator</span></span>](../language-reference/operators/addressof-operator.md)
