--- a/docs/visual-basic/misc/bc30588.md
+++ b/docs/visual-basic/misc/bc30588.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30588
 ms.assetid: 98866bc4-d3f5-4a80-ab9e-0817392bf237
-ms.openlocfilehash: 5ce16618bff1700dae34ccd3deb315f66e717005
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1526ad115e8bd25a974cf598557bce66992cc061
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620639"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369725"
 ---
-# <a name="omitted-argument-cannot-match-a-paramarray-parameter"></a><span data-ttu-id="b6ae6-102">L'argomento omesso non può corrispondere a un parametro ParamArray</span><span class="sxs-lookup"><span data-stu-id="b6ae6-102">Omitted argument cannot match a ParamArray parameter</span></span>
-<span data-ttu-id="b6ae6-103">È stato omesso un argomento che deve corrispondere a un parametro `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="b6ae6-103">You have omitted an argument required to match a `ParamArray` parameter.</span></span> <span data-ttu-id="b6ae6-104">`ParamArray`, che consente di passare un numero arbitrario di argomenti a una routine, può essere usato solo nell'ultimo argomento di un elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="b6ae6-104">`ParamArray`, which allows you to pass an arbitrary number of arguments to a procedure, can be used only on the last argument of an argument list.</span></span>  
+# <a name="omitted-argument-cannot-match-a-paramarray-parameter"></a><span data-ttu-id="cd2df-102">L'argomento omesso non può corrispondere a un parametro ParamArray</span><span class="sxs-lookup"><span data-stu-id="cd2df-102">Omitted argument cannot match a ParamArray parameter</span></span>
+<span data-ttu-id="cd2df-103">È stato omesso un argomento che deve corrispondere a un parametro `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="cd2df-103">You have omitted an argument required to match a `ParamArray` parameter.</span></span> <span data-ttu-id="cd2df-104">`ParamArray`, che consente di passare un numero arbitrario di argomenti a una routine, può essere usato solo nell'ultimo argomento di un elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="cd2df-104">`ParamArray`, which allows you to pass an arbitrary number of arguments to a procedure, can be used only on the last argument of an argument list.</span></span>  
   
- <span data-ttu-id="b6ae6-105">**ID errore:** BC30588</span><span class="sxs-lookup"><span data-stu-id="b6ae6-105">**Error ID:** BC30588</span></span>  
+ <span data-ttu-id="cd2df-105">**ID errore:** BC30588</span><span class="sxs-lookup"><span data-stu-id="cd2df-105">**Error ID:** BC30588</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b6ae6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b6ae6-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cd2df-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cd2df-106">To correct this error</span></span>  
   
-- <span data-ttu-id="b6ae6-107">Fornire l'argomento omesso.</span><span class="sxs-lookup"><span data-stu-id="b6ae6-107">Supply the omitted argument.</span></span>  
+- <span data-ttu-id="cd2df-107">Fornire l'argomento omesso.</span><span class="sxs-lookup"><span data-stu-id="cd2df-107">Supply the omitted argument.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b6ae6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b6ae6-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cd2df-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cd2df-108">See also</span></span>
 
-- [<span data-ttu-id="b6ae6-109">ParamArray</span><span class="sxs-lookup"><span data-stu-id="b6ae6-109">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="cd2df-109">ParamArray</span><span class="sxs-lookup"><span data-stu-id="cd2df-109">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
