--- a/docs/visual-basic/misc/bc30601.md
+++ b/docs/visual-basic/misc/bc30601.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30601
 ms.assetid: c8fbdc21-d2ff-404d-92b9-7277ade18e60
-ms.openlocfilehash: a5a1a4615f7b98431080da1102ccfe1ac036173e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d7a3998a5e6f1ccbb472c9a3cb6828f80face577
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620644"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369582"
 ---
-# <a name="--expected"></a><span data-ttu-id="d7fa1-102">Previsto '-'</span><span class="sxs-lookup"><span data-stu-id="d7fa1-102">'-' expected</span></span>
-<span data-ttu-id="d7fa1-103">La sintassi per questa riga non è corretta.</span><span class="sxs-lookup"><span data-stu-id="d7fa1-103">The syntax for this line is incorrect.</span></span>  
+# <a name="--expected"></a><span data-ttu-id="e3232-102">Previsto '-'</span><span class="sxs-lookup"><span data-stu-id="e3232-102">'-' expected</span></span>
+<span data-ttu-id="e3232-103">La sintassi per questa riga non è corretta.</span><span class="sxs-lookup"><span data-stu-id="e3232-103">The syntax for this line is incorrect.</span></span>  
   
- <span data-ttu-id="d7fa1-104">**ID errore:** BC30601</span><span class="sxs-lookup"><span data-stu-id="d7fa1-104">**Error ID:** BC30601</span></span>  
+ <span data-ttu-id="e3232-104">**ID errore:** BC30601</span><span class="sxs-lookup"><span data-stu-id="e3232-104">**Error ID:** BC30601</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d7fa1-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d7fa1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e3232-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3232-105">To correct this error</span></span>  
   
-- <span data-ttu-id="d7fa1-106">Controllare la sintassi del codice che ha generato l'errore.</span><span class="sxs-lookup"><span data-stu-id="d7fa1-106">Check the syntax of the code that raised this error.</span></span>  
+- <span data-ttu-id="e3232-106">Controllare la sintassi del codice che ha generato l'errore.</span><span class="sxs-lookup"><span data-stu-id="e3232-106">Check the syntax of the code that raised this error.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d7fa1-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d7fa1-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e3232-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3232-107">See also</span></span>
 
-- [<span data-ttu-id="d7fa1-108">Struttura del programma e convenzioni di scrittura del codice</span><span class="sxs-lookup"><span data-stu-id="d7fa1-108">Program Structure and Code Conventions</span></span>](../../visual-basic/programming-guide/program-structure/program-structure-and-code-conventions.md)
+- [<span data-ttu-id="e3232-108">Struttura del programma e convenzioni del codice</span><span class="sxs-lookup"><span data-stu-id="e3232-108">Program Structure and Code Conventions</span></span>](../programming-guide/program-structure/program-structure-and-code-conventions.md)
