--- a/docs/visual-basic/misc/bc31406.md
+++ b/docs/visual-basic/misc/bc31406.md
@@ -1,5 +1,5 @@
 ---
-title: "'<methodname>' non è possibile eseguire l'override di un metodo nascosto"
+title: "' <methodname> ' non può eseguire l'override di un metodo che è stato nascosto"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31406
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31406
 ms.assetid: 08ed11a6-3399-49fa-ac6e-c5df1328a24e
-ms.openlocfilehash: aebf7f315774456d7801daa05a48fb6b0efaf969
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a5eff33db05138a993bd27b55ec0b9630d4dad7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625496"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407860"
 ---
-# <a name="methodname-cannot-override-a-method-that-has-been-shadowed"></a><span data-ttu-id="6519e-102">'\<NomeMetodo >' non è possibile eseguire l'override di un metodo nascosto</span><span class="sxs-lookup"><span data-stu-id="6519e-102">'\<methodname>' cannot override a method that has been shadowed</span></span>
-<span data-ttu-id="6519e-103">Un metodo ha tentato di eseguire l'override di un metodo che nasconde un altro membro.</span><span class="sxs-lookup"><span data-stu-id="6519e-103">A method attempted to override a method that shadows another member.</span></span>  
+# <a name="methodname-cannot-override-a-method-that-has-been-shadowed"></a><span data-ttu-id="a1a80-102">' \<methodname> ' non può eseguire l'override di un metodo che è stato nascosto</span><span class="sxs-lookup"><span data-stu-id="a1a80-102">'\<methodname>' cannot override a method that has been shadowed</span></span>
+<span data-ttu-id="a1a80-103">Un metodo ha tentato di eseguire l'override di un metodo che nasconde un altro membro.</span><span class="sxs-lookup"><span data-stu-id="a1a80-103">A method attempted to override a method that shadows another member.</span></span>  
   
- <span data-ttu-id="6519e-104">**ID errore:** BC31406</span><span class="sxs-lookup"><span data-stu-id="6519e-104">**Error ID:** BC31406</span></span>  
+ <span data-ttu-id="a1a80-104">**ID errore:** BC31406</span><span class="sxs-lookup"><span data-stu-id="a1a80-104">**Error ID:** BC31406</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6519e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6519e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a1a80-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a1a80-105">To correct this error</span></span>  
   
-- <span data-ttu-id="6519e-106">Usare il modificatore `Shadows` per eseguire l'override dei membri nascosti.</span><span class="sxs-lookup"><span data-stu-id="6519e-106">Use the `Shadows` modifier to override shadowed members.</span></span>  
+- <span data-ttu-id="a1a80-106">Usare il modificatore `Shadows` per eseguire l'override dei membri nascosti.</span><span class="sxs-lookup"><span data-stu-id="a1a80-106">Use the `Shadows` modifier to override shadowed members.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6519e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6519e-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a1a80-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a1a80-107">See also</span></span>
 
-- [<span data-ttu-id="6519e-108">Shadows</span><span class="sxs-lookup"><span data-stu-id="6519e-108">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
-- [<span data-ttu-id="6519e-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="6519e-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="a1a80-108">Shadows</span><span class="sxs-lookup"><span data-stu-id="a1a80-108">Shadows</span></span>](../language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="a1a80-109">Override</span><span class="sxs-lookup"><span data-stu-id="a1a80-109">Overrides</span></span>](../language-reference/modifiers/overrides.md)
