--- a/docs/visual-basic/misc/bc32102.md
+++ b/docs/visual-basic/misc/bc32102.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32102
 ms.assetid: f4ebd416-7fb9-4a24-a8df-e9ee7ccc2c76
-ms.openlocfilehash: eb1da4336cc51da1b7ea06b04e49f228aa1d228c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 97ccfaf73405d832684cbe7ca828048051e81b09
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913478"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413726"
 ---
-# <a name="structure-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="05305-102">Non è possibile specificare il vincolo 'Structure' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="05305-102">'Structure' constraint cannot be specified multiple times for the same type parameter</span></span>
-<span data-ttu-id="05305-103">Un elenco di vincoli include il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) più volte.</span><span class="sxs-lookup"><span data-stu-id="05305-103">A constraint list includes the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint more than once.</span></span>  
+# <a name="structure-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="8d836-102">Non è possibile specificare il vincolo 'Structure' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="8d836-102">'Structure' constraint cannot be specified multiple times for the same type parameter</span></span>
+<span data-ttu-id="8d836-103">Un elenco di vincoli include il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) più volte.</span><span class="sxs-lookup"><span data-stu-id="8d836-103">A constraint list includes the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint more than once.</span></span>  
   
- <span data-ttu-id="05305-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) ).</span><span class="sxs-lookup"><span data-stu-id="05305-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="05305-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="05305-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="8d836-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) ).</span><span class="sxs-lookup"><span data-stu-id="8d836-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="8d836-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="8d836-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="05305-106">ID errore: BC32102</span><span class="sxs-lookup"><span data-stu-id="05305-106">Error ID: BC32102</span></span>  
+ <span data-ttu-id="8d836-106">ID errore: BC32102</span><span class="sxs-lookup"><span data-stu-id="8d836-106">Error ID: BC32102</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="05305-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="05305-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8d836-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8d836-107">To correct this error</span></span>  
   
-- <span data-ttu-id="05305-108">Rimuovere qualsiasi parola chiave `Structure` ridondante.</span><span class="sxs-lookup"><span data-stu-id="05305-108">Remove any redundant `Structure` keywords.</span></span> <span data-ttu-id="05305-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="05305-109">You should have only one in the constraint list.</span></span>  
+- <span data-ttu-id="8d836-108">Rimuovere qualsiasi parola chiave `Structure` ridondante.</span><span class="sxs-lookup"><span data-stu-id="8d836-108">Remove any redundant `Structure` keywords.</span></span> <span data-ttu-id="8d836-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="8d836-109">You should have only one in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="05305-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="05305-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8d836-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8d836-110">See also</span></span>
 
-- [<span data-ttu-id="05305-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="05305-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="05305-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="05305-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="8d836-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8d836-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="8d836-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="8d836-112">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
