--- a/docs/visual-basic/misc/bc36714.md
+++ b/docs/visual-basic/misc/bc36714.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36714
 ms.assetid: ba9408f3-e606-4749-8372-987999f405f5
-ms.openlocfilehash: 9482789691df2faf704c4533c6e71173d7f9234b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0d7a328c2a08dd10bddd43549c9c6878fd065096
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663162"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369569"
 ---
-# <a name="expanded-properties-cannot-be-initialized"></a><span data-ttu-id="e9aab-102">Non è possibile inizializzare le proprietà espanse</span><span class="sxs-lookup"><span data-stu-id="e9aab-102">Expanded properties cannot be initialized</span></span>
-<span data-ttu-id="e9aab-103">Una proprietà implementata automaticamente può essere inizializzata come parte della relativa dichiarazione, mentre questo non è possibile per una proprietà espansa.</span><span class="sxs-lookup"><span data-stu-id="e9aab-103">An auto-implemented property can be initialized as part of its declaration, but an expanded property cannot be.</span></span>  
+# <a name="expanded-properties-cannot-be-initialized"></a><span data-ttu-id="c2cdb-102">Non è possibile inizializzare le proprietà espanse</span><span class="sxs-lookup"><span data-stu-id="c2cdb-102">Expanded properties cannot be initialized</span></span>
+<span data-ttu-id="c2cdb-103">Una proprietà implementata automaticamente può essere inizializzata come parte della relativa dichiarazione, mentre questo non è possibile per una proprietà espansa.</span><span class="sxs-lookup"><span data-stu-id="c2cdb-103">An auto-implemented property can be initialized as part of its declaration, but an expanded property cannot be.</span></span>  
   
- <span data-ttu-id="e9aab-104">**ID errore:** BC36714</span><span class="sxs-lookup"><span data-stu-id="e9aab-104">**Error ID:** BC36714</span></span>  
+ <span data-ttu-id="c2cdb-104">**ID errore:** BC36714</span><span class="sxs-lookup"><span data-stu-id="c2cdb-104">**Error ID:** BC36714</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e9aab-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e9aab-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c2cdb-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c2cdb-105">To correct this error</span></span>  
   
-- <span data-ttu-id="e9aab-106">Usare una proprietà implementata automaticamente oppure rimuovere l'inizializzazione dalla dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="e9aab-106">Either use an auto-implemented property or remove the initialization from the property declaration.</span></span>  
+- <span data-ttu-id="c2cdb-106">Usare una proprietà implementata automaticamente oppure rimuovere l'inizializzazione dalla dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="c2cdb-106">Either use an auto-implemented property or remove the initialization from the property declaration.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="e9aab-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="e9aab-107">Example</span></span>  
- <span data-ttu-id="e9aab-108">Gli esempi seguenti mostrano sia le proprietà implementate automaticamente che le proprietà espanse.</span><span class="sxs-lookup"><span data-stu-id="e9aab-108">The following examples show both auto-implemented and expanded properties.</span></span> <span data-ttu-id="e9aab-109">Le proprietà implementate automaticamente possono essere inizializzate mediante l'assegnazione o una clausola `New` , diversamente dalle proprietà espanse.</span><span class="sxs-lookup"><span data-stu-id="e9aab-109">Auto-implemented properties can be initialized by using assignment or a `New` clause, but expanded properties cannot be.</span></span>  
+## <a name="example"></a><span data-ttu-id="c2cdb-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="c2cdb-107">Example</span></span>  
+ <span data-ttu-id="c2cdb-108">Gli esempi seguenti mostrano sia le proprietà implementate automaticamente che le proprietà espanse.</span><span class="sxs-lookup"><span data-stu-id="c2cdb-108">The following examples show both auto-implemented and expanded properties.</span></span> <span data-ttu-id="c2cdb-109">Le proprietà implementate automaticamente possono essere inizializzate mediante l'assegnazione o una clausola `New` , diversamente dalle proprietà espanse.</span><span class="sxs-lookup"><span data-stu-id="c2cdb-109">Auto-implemented properties can be initialized by using assignment or a `New` clause, but expanded properties cannot be.</span></span>  
   
 ```vb  
 Class AutoImplementedExample  
@@ -55,8 +55,8 @@ Class ExpandedExample
 End Class  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="e9aab-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e9aab-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c2cdb-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c2cdb-110">See also</span></span>
 
-- [<span data-ttu-id="e9aab-111">Proprietà implementate automaticamente</span><span class="sxs-lookup"><span data-stu-id="e9aab-111">Auto-Implemented Properties</span></span>](../../visual-basic/programming-guide/language-features/procedures/auto-implemented-properties.md)
-- [<span data-ttu-id="e9aab-112">Procedura: Creare una proprietà</span><span class="sxs-lookup"><span data-stu-id="e9aab-112">How to: Create a Property</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-create-a-property.md)
-- [<span data-ttu-id="e9aab-113">Routine Property</span><span class="sxs-lookup"><span data-stu-id="e9aab-113">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="c2cdb-111">Proprietà implementate automaticamente</span><span class="sxs-lookup"><span data-stu-id="c2cdb-111">Auto-Implemented Properties</span></span>](../programming-guide/language-features/procedures/auto-implemented-properties.md)
+- [<span data-ttu-id="c2cdb-112">Procedura: creare una proprietà</span><span class="sxs-lookup"><span data-stu-id="c2cdb-112">How to: Create a Property</span></span>](../programming-guide/language-features/procedures/how-to-create-a-property.md)
+- [<span data-ttu-id="c2cdb-113">Routine Property</span><span class="sxs-lookup"><span data-stu-id="c2cdb-113">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
