--- a/docs/visual-basic/misc/bc40003.md
+++ b/docs/visual-basic/misc/bc40003.md
@@ -1,5 +1,5 @@
 ---
-title: <type1> «<membername>' nasconde un membro che supportano l'overload dichiarato nella base <type2> '<classname>»
+title: <type1>' <membername> ' nasconde un membro che esegue l'overload dichiarato nella base <type2> ' <classname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc40003
@@ -7,38 +7,38 @@ f1_keywords:
 helpviewer_keywords:
 - BC40003
 ms.assetid: 1e0d2061-0ad9-4915-b946-d55cb5d5ee80
-ms.openlocfilehash: ca09ca29b7ae250e24f77057f2971f50905630b9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5ead09c7f38c0375ef8a02752ba57c08e08d6cce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614432"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369297"
 ---
-# <a name="type1-membername-shadows-an-overloadable-member-declared-in-the-base-type2-classname"></a><span data-ttu-id="26630-102">\<type1 > '\<nomeMembro >' nasconde un membro che supportano l'overload dichiarato nella base \<type2 > '\<NomeClasse >'</span><span class="sxs-lookup"><span data-stu-id="26630-102">\<type1> '\<membername>' shadows an overloadable member declared in the base \<type2> '\<classname>'</span></span>
-<span data-ttu-id="26630-103">\<type1 > '\<nomeMembro >' nasconde un membro che supportano l'overload dichiarato nella base \<type2 > '\<classname >.</span><span class="sxs-lookup"><span data-stu-id="26630-103">\<type1> '\<membername>' shadows an overloadable member declared in the base \<type2> '\<classname>.</span></span> <span data-ttu-id="26630-104">Per eseguire l'overload del metodo di base, quest'ultimo deve essere dichiarato 'Overloads'.</span><span class="sxs-lookup"><span data-stu-id="26630-104">If you want to overload the base method, this method must be declared 'Overloads'.</span></span>  
+# <a name="type1-membername-shadows-an-overloadable-member-declared-in-the-base-type2-classname"></a><span data-ttu-id="a8113-102">\<type1>' \<membername> ' nasconde un membro che esegue l'overload dichiarato nella base \<type2> ' \<classname> '</span><span class="sxs-lookup"><span data-stu-id="a8113-102">\<type1> '\<membername>' shadows an overloadable member declared in the base \<type2> '\<classname>'</span></span>
+<span data-ttu-id="a8113-103">\<type1>' \<membername> ' nasconde un membro che esegue l'overload dichiarato nell'oggetto di base \<type2> \<classname> .</span><span class="sxs-lookup"><span data-stu-id="a8113-103">\<type1> '\<membername>' shadows an overloadable member declared in the base \<type2> '\<classname>.</span></span> <span data-ttu-id="a8113-104">Per eseguire l'overload del metodo di base, quest'ultimo deve essere dichiarato 'Overloads'.</span><span class="sxs-lookup"><span data-stu-id="a8113-104">If you want to overload the base method, this method must be declared 'Overloads'.</span></span>  
   
- <span data-ttu-id="26630-105">Una classe derivata definisce una routine `Function` o `Sub` oppure una `Property` con lo stesso nome di una routine o proprietà definita nella classe base.</span><span class="sxs-lookup"><span data-stu-id="26630-105">A derived class defines a `Function` or `Sub` procedure or a `Property` with the same name as a procedure or property defined in the base class.</span></span> <span data-ttu-id="26630-106">Dal momento che le routine e le proprietà sono membri che supportano l'overload, la classe derivata può eseguire l'overload o nascondere il membro della classe base.</span><span class="sxs-lookup"><span data-stu-id="26630-106">Because procedures and properties are overloadable members, the derived class can either overload or shadow the base class member.</span></span> <span data-ttu-id="26630-107">Tuttavia, il codice della classe derivata non specifica [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) o [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="26630-107">However, the derived class code does not specify either [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) or [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) in the declaration.</span></span> <span data-ttu-id="26630-108">In assenza di una parola chiave, il compilatore presuppone `Shadows`.</span><span class="sxs-lookup"><span data-stu-id="26630-108">In the absence of either keyword, the compiler assumes `Shadows`.</span></span>  
+ <span data-ttu-id="a8113-105">Una classe derivata definisce una routine `Function` o `Sub` oppure una `Property` con lo stesso nome di una routine o proprietà definita nella classe base.</span><span class="sxs-lookup"><span data-stu-id="a8113-105">A derived class defines a `Function` or `Sub` procedure or a `Property` with the same name as a procedure or property defined in the base class.</span></span> <span data-ttu-id="a8113-106">Dal momento che le routine e le proprietà sono membri che supportano l'overload, la classe derivata può eseguire l'overload o nascondere il membro della classe base.</span><span class="sxs-lookup"><span data-stu-id="a8113-106">Because procedures and properties are overloadable members, the derived class can either overload or shadow the base class member.</span></span> <span data-ttu-id="a8113-107">Tuttavia, il codice della classe derivata non specifica [Overloads](../language-reference/modifiers/overloads.md) o [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="a8113-107">However, the derived class code does not specify either [Overloads](../language-reference/modifiers/overloads.md) or [Shadows](../language-reference/modifiers/shadows.md) in the declaration.</span></span> <span data-ttu-id="a8113-108">In assenza di una parola chiave, il compilatore presuppone `Shadows`.</span><span class="sxs-lookup"><span data-stu-id="a8113-108">In the absence of either keyword, the compiler assumes `Shadows`.</span></span>  
   
- <span data-ttu-id="26630-109">È buona norma specificare `Overloads` o `Shadows`nella programmazione.</span><span class="sxs-lookup"><span data-stu-id="26630-109">It is good programming practice to specify either `Overloads` or `Shadows`.</span></span> <span data-ttu-id="26630-110">Questo rende il codice più semplice da leggere e comprendere.</span><span class="sxs-lookup"><span data-stu-id="26630-110">This makes your code easier to read and understand.</span></span>  
+ <span data-ttu-id="a8113-109">È buona norma specificare `Overloads` o `Shadows`nella programmazione.</span><span class="sxs-lookup"><span data-stu-id="a8113-109">It is good programming practice to specify either `Overloads` or `Shadows`.</span></span> <span data-ttu-id="a8113-110">Questo rende il codice più semplice da leggere e comprendere.</span><span class="sxs-lookup"><span data-stu-id="a8113-110">This makes your code easier to read and understand.</span></span>  
   
- <span data-ttu-id="26630-111">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="26630-111">By default, this message is a warning.</span></span> <span data-ttu-id="26630-112">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="26630-112">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="a8113-111">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="a8113-111">By default, this message is a warning.</span></span> <span data-ttu-id="a8113-112">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="a8113-112">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="26630-113">**ID errore:** BC40003</span><span class="sxs-lookup"><span data-stu-id="26630-113">**Error ID:** BC40003</span></span>  
+ <span data-ttu-id="a8113-113">**ID errore:** BC40003</span><span class="sxs-lookup"><span data-stu-id="a8113-113">**Error ID:** BC40003</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="26630-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="26630-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a8113-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8113-114">To correct this error</span></span>  
   
-- <span data-ttu-id="26630-115">Se si vuole eseguire l'overload del metodo della classe base o di una proprietà, includere la parola chiave `Overloads` nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="26630-115">If you want to overload the base class method or property, include the `Overloads` keyword in the declaration.</span></span>  
+- <span data-ttu-id="a8113-115">Se si vuole eseguire l'overload del metodo della classe base o di una proprietà, includere la parola chiave `Overloads` nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="a8113-115">If you want to overload the base class method or property, include the `Overloads` keyword in the declaration.</span></span>  
   
-- <span data-ttu-id="26630-116">Se si vuole nascondere il metodo della classe base o una proprietà, includere la parola chiave `Shadows` invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="26630-116">If you want to shadow the base class method or property, include the `Shadows` keyword instead of `Overloads`.</span></span>  
+- <span data-ttu-id="a8113-116">Se si vuole nascondere il metodo della classe base o una proprietà, includere la parola chiave `Shadows` invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="a8113-116">If you want to shadow the base class method or property, include the `Shadows` keyword instead of `Overloads`.</span></span>  
   
-- <span data-ttu-id="26630-117">Se non si vuole né eseguire l'overload né nascondere il membro della classe base, modificare il nome del membro della classe derivata.</span><span class="sxs-lookup"><span data-stu-id="26630-117">If you do not want to either overload or shadow the base class member, change the name of the derived class member.</span></span>  
+- <span data-ttu-id="a8113-117">Se non si vuole né eseguire l'overload né nascondere il membro della classe base, modificare il nome del membro della classe derivata.</span><span class="sxs-lookup"><span data-stu-id="a8113-117">If you do not want to either overload or shadow the base class member, change the name of the derived class member.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="26630-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="26630-118">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a8113-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8113-118">See also</span></span>
 
-- [<span data-ttu-id="26630-119">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="26630-119">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="26630-120">Overload</span><span class="sxs-lookup"><span data-stu-id="26630-120">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
-- [<span data-ttu-id="26630-121">Shadows</span><span class="sxs-lookup"><span data-stu-id="26630-121">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
-- [<span data-ttu-id="26630-122">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="26630-122">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
-- [<span data-ttu-id="26630-123">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="26630-123">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
-- [<span data-ttu-id="26630-124">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="26630-124">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
-- [<span data-ttu-id="26630-125">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="26630-125">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="a8113-119">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="a8113-119">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="a8113-120">Overload</span><span class="sxs-lookup"><span data-stu-id="a8113-120">Overloads</span></span>](../language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="a8113-121">Shadows</span><span class="sxs-lookup"><span data-stu-id="a8113-121">Shadows</span></span>](../language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="a8113-122">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a8113-122">Shadowing in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="a8113-123">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="a8113-123">Function Statement</span></span>](../language-reference/statements/function-statement.md)
+- [<span data-ttu-id="a8113-124">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="a8113-124">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="a8113-125">Property Statement</span><span class="sxs-lookup"><span data-stu-id="a8113-125">Property Statement</span></span>](../language-reference/statements/property-statement.md)
