--- a/docs/visual-basic/misc/bc40004.md
+++ b/docs/visual-basic/misc/bc40004.md
@@ -1,5 +1,5 @@
 ---
-title: <type1> «<membername>' è in conflitto con <type2> '<membername>' nella classe di base <type3> '<classname>' e deve essere dichiarato come 'Shadows'
+title: <type1>' <membername> ' è in conflitto con <type2> ' <membername> ' nella classe base <type3> ' <classname> ' e deve essere dichiarato ' Shadows '
 ms.date: 07/20/2015
 f1_keywords:
 - bc40004
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC40004
 ms.assetid: 24d10f31-3b3d-448c-b928-fc937e1f4a92
-ms.openlocfilehash: 1fa84ef3b7dccc3e4c2aeebb3e2eb75d635a1c44
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 287a1ebb2bca6aca3b2a2f2ebad0ff55d85f0cb7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614405"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369271"
 ---
-# <a name="type1-membername-conflicts-with-type2-membername-on-the-base-class-type3-classname-and-should-be-declared-shadows"></a><span data-ttu-id="91cb6-102">\<type1 > '\<nomeMembro >' è in conflitto con \<type2 > '\<nomeMembro >' nella classe di base \<type3 > '\<NomeClasse >' e deve essere dichiarato come 'Shadows'</span><span class="sxs-lookup"><span data-stu-id="91cb6-102">\<type1> '\<membername>' conflicts with \<type2> '\<membername>' on the base class \<type3> '\<classname>' and should be declared 'Shadows'</span></span>
-<span data-ttu-id="91cb6-103">Un elemento di programmazione è dichiarato con lo stesso nome di un elemento definito nella classe base.</span><span class="sxs-lookup"><span data-stu-id="91cb6-103">A programming element is declared with the same name as an element defined in the base class.</span></span> <span data-ttu-id="91cb6-104">In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.</span><span class="sxs-lookup"><span data-stu-id="91cb6-104">In this situation, the element in this class should shadow the base class element.</span></span>  
+# <a name="type1-membername-conflicts-with-type2-membername-on-the-base-class-type3-classname-and-should-be-declared-shadows"></a><span data-ttu-id="b8128-102">\<type1>' \<membername> ' è in conflitto con \<type2> ' \<membername> ' nella classe base \<type3> ' \<classname> ' e deve essere dichiarato ' Shadows '</span><span class="sxs-lookup"><span data-stu-id="b8128-102">\<type1> '\<membername>' conflicts with \<type2> '\<membername>' on the base class \<type3> '\<classname>' and should be declared 'Shadows'</span></span>
+<span data-ttu-id="b8128-103">Un elemento di programmazione è dichiarato con lo stesso nome di un elemento definito nella classe base.</span><span class="sxs-lookup"><span data-stu-id="b8128-103">A programming element is declared with the same name as an element defined in the base class.</span></span> <span data-ttu-id="b8128-104">In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.</span><span class="sxs-lookup"><span data-stu-id="b8128-104">In this situation, the element in this class should shadow the base class element.</span></span>  
   
- <span data-ttu-id="91cb6-105">Si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="91cb6-105">This message is a warning.</span></span> <span data-ttu-id="91cb6-106">Per impostazione predefinita viene usato`Shadows` .</span><span class="sxs-lookup"><span data-stu-id="91cb6-106">`Shadows` is assumed by default.</span></span> <span data-ttu-id="91cb6-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="91cb6-107">For more information about hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="b8128-105">Si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="b8128-105">This message is a warning.</span></span> <span data-ttu-id="b8128-106">Per impostazione predefinita viene usato`Shadows` .</span><span class="sxs-lookup"><span data-stu-id="b8128-106">`Shadows` is assumed by default.</span></span> <span data-ttu-id="b8128-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="b8128-107">For more information about hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="91cb6-108">**ID errore:** BC40004</span><span class="sxs-lookup"><span data-stu-id="91cb6-108">**Error ID:** BC40004</span></span>  
+ <span data-ttu-id="b8128-108">**ID errore:** BC40004</span><span class="sxs-lookup"><span data-stu-id="b8128-108">**Error ID:** BC40004</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="91cb6-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="91cb6-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b8128-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b8128-109">To correct this error</span></span>  
   
-- <span data-ttu-id="91cb6-110">Aggiungere la parola chiave `Shadows` alla dichiarazione o modificare il nome dell'elemento dichiarato.</span><span class="sxs-lookup"><span data-stu-id="91cb6-110">Add the `Shadows` keyword to the declaration, or change the name of the element being declared.</span></span>  
+- <span data-ttu-id="b8128-110">Aggiungere la parola chiave `Shadows` alla dichiarazione o modificare il nome dell'elemento dichiarato.</span><span class="sxs-lookup"><span data-stu-id="b8128-110">Add the `Shadows` keyword to the declaration, or change the name of the element being declared.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="91cb6-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="91cb6-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b8128-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b8128-111">See also</span></span>
 
-- [<span data-ttu-id="91cb6-112">Shadows</span><span class="sxs-lookup"><span data-stu-id="91cb6-112">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
-- [<span data-ttu-id="91cb6-113">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="91cb6-113">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="b8128-112">Shadows</span><span class="sxs-lookup"><span data-stu-id="b8128-112">Shadows</span></span>](../language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="b8128-113">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b8128-113">Shadowing in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/shadowing.md)
